# inspections_platform

./: README.md
Backend/: .gitignore  README.md  audit_service.py  audits.db  availability_service.py  cctv_service.py  config.py  generate_icons.py  iniciar_opd.bat  inspect_excel.py  main.py  orders_service.py  paths.py  pdf_service.py  pyproject.toml  requirements.txt
Frontend/static/: corporate-font.css  manifest.json  sw.js  walmart-font.css
Frontend/templates/: index.html  main_page.html
Frontend/templates/audits/: detail.html  form.html  list.html
Frontend/templates/availability/: detail.html  form.html  list.html
Frontend/templates/cctv/: detail.html  form.html  list.html
Frontend/templates/partials/: orders.html
