[project]
name = "opd-pwa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "fpdf2>=2.8.7",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "python-barcode>=0.16.1",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
